# ftxui-snake-coursework

./: .gitignore  CMakeLists.txt  README.md
include/: SnakeGame.hpp
src/: SnakeGame.cpp  main.cpp
